--- a/webpages/style.css
+++ b/webpages/style.css
@@ -4,7 +4,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 .landing {
-  background-image: url(../images/crossfit-1126999_1280.jpg);
+  background-image: url(../images/dumbbell-1966704_1280.jpg);
   color: ghostwhite;
   background-size: cover;
 }
@@ -43,8 +43,16 @@ nav a:hover {
   width: 90%;
   margin-top:50px;
 }
+.home-container #cellphone{
+  box-shadow: -0px 1px grey;
+  border: none;
+}
  .icons h1{
-  color: white;
+  color: green;
+}
+.icons img:hover{
+ box-shadow: 1px 1px 19px grey;
+ border-radius: 20px;
 }
 .about{
   width: 40%;
@@ -69,14 +77,24 @@ button a {
   text-decoration: none;
 }
 
-button a:active {
-  color: brown;
+/* unvisited link */
+a:link {
+  color: green;
 }
-button a:link {
-  color: white;
+
+/* visited link */
+a:visited {
+  color: green;
 }
-button a:hover {
+
+/* mouse over link */
+a:hover {
   color: red;
+}
+
+/* selected link */
+a:active {
+  color: yellow;
 }
 
 /*contact page*/
