--- a/webpages/style.css
+++ b/webpages/style.css
@@ -336,6 +336,7 @@ h1 {
 /*Workout section*/
 .workout-body {
   margin: 0 auto;
+  background-color: white;
 }
 .workout-one {
   display: flex;
@@ -575,6 +576,62 @@ h1 {
   .contact-container {
   width: 65%;
   
+}
+/*Workout section*/
+#h1{
+  font-size: 28px;
+}
+.workout-one {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  
+}
+.section-one {
+  box-shadow: 1px 2px 5px 1px rgb(210, 209, 209);
+  border: none;
+  width: 70%;
+  padding: 20px;
+  color: gray;
+  display: flex;
+}
+.section-one h2 {
+  font-size: 10px;
+}
+.section-one button {
+  font-size: 12px;
+  background-color: black;
+  width:30%;
+  padding: 6px;
+  color: white;
+}
+.section-one input {
+  width: 100%;
+  border: 0.5px solid gray;
+  font-size: 10px;
+  padding: 5px;
+}
+.workout-history {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 20px;
+  margin: 0 auto;
+}
+.section-two {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+.section-two input {
+  width: 60%;
+  height: 10px;
+}
+.section-three {
+  width: 65%;
+}
+.section-four {
+  width: 100%;
 }
 }
 
