--- a/webpages/style.css
+++ b/webpages/style.css
@@ -616,12 +616,11 @@ h1 {
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   grid-gap: 20px;
-  margin: 0 auto;
+  margin-right: 200px;
 }
 .section-two {
-  display: flex;
-  flex-direction: column;
-  width: 60%;
+  width: auto 0;
+  padding-right: 100px;
 }
 .section-two input {
   width: 60%;
